[gd_scene load_steps=12 format=2]

[ext_resource path="res://Minion/MinionFast.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Triangle.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Estoque.png" type="Texture" id=3]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]
height = 23.6087

[node name="MinionFast" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.443137, 0.0823529, 0.47451, 1 )
rotation = 1.5708
texture = ExtResource( 2 )

[node name="Attack" type="Position2D" parent="."]
position = Vector2( 14.7667, 0 )

[node name="SwordSprite" type="AnimatedSprite" parent="Attack"]
visible = false
position = Vector2( 21.0052, 0.250282 )
scale = Vector2( 2.02083, 1 )
frames = SubResource( 6 )
speed_scale = 2.0

[node name="Hitbox" parent="Attack" instance=ExtResource( 4 )]
collision_mask = 8

[node name="HitboxShape2d" parent="Attack/Hitbox" index="0"]
position = Vector2( 22.1083, -0.250282 )
rotation = 1.5708
shape = SubResource( 7 )

[connection signal="animation_finished" from="Attack/SwordSprite" to="." method="_on_SwordSprite_animation_finished"]
[connection signal="area_entered" from="Attack/Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Attack/Hitbox"]
